# protoc-gen-py-mcp

./: .coverage  .flake8  .gitignore  CLAUDE.md  Makefile  PLUGIN_PARAMETERS.md  README.md  REQUIREMENTS.md  TODOS.md  flake.nix  grpc_client.py  grpc_server.py  pyproject.toml
examples/mcp_vibe_example/: README.md  demo.py  pyproject.toml  test_integration.py
examples/mcp_vibe_example/mcp_vibe_app/: __init__.py  server.py
examples/mcp_vibe_example/protos/: advanced.proto  example_pb2.pyi  example_pb2_mcp.py
examples/protos/example/v1/: example.proto
protos/: advanced_pb2_mcp.py  example_pb2.py  example_pb2_grpc.py  example_pb2_mcp.py  wellknown.proto  wellknown_pb2_mcp.py
src/mcp_vibe/: ARCHITECTURE.md  README.md  demo.py  pyproject.toml  test_integration.py
src/mcp_vibe/mcp_vibe_app/: __init__.py  server.py
src/protoc_gen_py_mcp/: __init__.py  plugin.py  validation.py
src/protoc_gen_py_mcp/cli/: __init__.py  cli.py
src/protoc_gen_py_mcp/core/: __init__.py  code_generator.py  config.py  logger.py  protobuf_indexer.py  type_analyzer.py  utils.py
tests/: __init__.py  conftest.py  test_utils.py
tests/fixtures/: complex.proto  simple.proto
tests/integration/: __init__.py  test_end_to_end.py  test_generated_code.py  test_real_world_scenarios.py
tests/unit/: __init__.py  test_cli.py  test_error_handling.py  test_plugin.py  test_regression.py  test_validation.py
