[project]
name = "protoc-gen-py-mcp"
version = "0.0.1"
description = "Build MCP servers from proto files"
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = ["fastmcp>=2.3.1", "protobuf>=5.26.1,<6.0", "grpcio-tools>=1.71.0"]

[project.scripts]
protoc-gen-py-mcp = "protoc_gen_py_mcp.plugin:main"

[project.urls]
Repository = "https://github.com/stablekernel/protoc-gen-py-mcp"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"

[tool.pytest.ini_options]
filterwarnings = []
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", ".git", "dist"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "types-protobuf>=5.26.0",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | protos
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["protos/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
mypy_path = "src"
exclude = [
    "protos/",
    "build/",
    "dist/",
    "src/mcp_vibe/",
    "examples/gen/",
]

